# tap-strava

./: README.md  meltano.yml  pyproject.toml
tap_strava/: __init__.py  auth.py  client.py  streams.py  tap.py
